# trade-log-elastic-writer

./: Cargo.toml  Dockerfile
.github/workflows/: release.yaml
src/: main.rs  settings.rs
src/background/: mod.rs
